Fix .row not being wrapped around its children

--- a/src/scss/layout/grid.scss
+++ b/src/scss/layout/grid.scss
@@ -2,6 +2,7 @@
 .row {
   @include centerize;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 
 // Content creates a responsive space to hold page data
